# vs_v4l2_camera_saver

./: .gitignore  CMakeLists.txt  README.md  jpegencodercuda.cpp  jpegencodercuda.h  main.cpp  main_video_split.cpp  params.txt  v4l2camera.cpp  v4l2camera.h
